# game-of-life

./: .astylerc  .editorconfig  CMakeLists.txt  README.adoc  gol.c  gol.h  gol_cli.c  gol_config.h.in  gol_gui.c
